Fix navigation color on mobile.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -87,6 +87,7 @@
         }
 
         .page-link {
+            color: $text-color;
             display: block;
             padding: 5px 10px;
 
